--- a/package.json
+++ b/package.json
@@ -39,10 +39,10 @@
     "polished": "^1.9.2",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
-    "react-dom": "^16.3.2",
-    "styled-components": "^3.2.6"
+    "react-dom": "^16.3.2"
   },
   "dependencies": {
-    "moment": "^2.22.1"
+    "moment": "^2.22.1",
+    "styled-components": "^3.2.6"
   }
 }
