--- a/package.json
+++ b/package.json
@@ -29,28 +29,32 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.3",
-    "babel-jest": "^22.4.3",
+    "babel-eslint": "^8.2.6",
+    "babel-jest": "^22.4.4",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.11.2",
+    "enzyme-adapter-react-16": "^1.13.0",
     "eslint": "^4.19.1",
-    "eslint-plugin-import": "^2.11.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.7.0",
-    "eslint-watch": "^3.1.4",
-    "jest": "^22.4.3",
-    "polished": "^1.9.2",
-    "prop-types": "^15.6.1",
-    "react": "^16.3.2",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.13.0",
+    "eslint-watch": "^3.1.5",
+    "jest": "^22.4.4",
+    "polished": "^1.9.3",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.6",
     "react-addons-test-utils": "^15.6.2",
-    "react-dom": "^16.3.2",
-    "react-test-renderer": "^16.3.2"
+    "react-dom": "^16.8.6",
+    "react-test-renderer": "^16.8.6"
   },
   "dependencies": {
-    "moment": "^2.22.1",
+    "moment": "^2.24.0",
     "styled-components": "^4.2.0"
+  },
+  "jest": {
+    "verbose": true,
+    "testURL": "http://localhost/"
   }
 }
