--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint lib/**; exit 0",
     "lint:watch": "esw -w lib/**",
     "lint:fix": "eslint lib/** --fix",
-    "prepublish": "npm run build"
+    "prepublish": "npm run build",
+    "webpack-build-prod": "webpack --mode production"
   },
   "repository": {
     "type": "git",
@@ -27,10 +28,14 @@
   },
   "homepage": "https://github.com/talentedandrew/react-modern-datepicker#readme",
   "devDependencies": {
+    "@babel/core": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
+    "@babel/preset-react": "^7.0.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.6",
     "babel-jest": "^22.4.4",
+    "babel-loader": "^8.0.6",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
@@ -47,7 +52,9 @@
     "react": "^16.8.6",
     "react-addons-test-utils": "^15.6.2",
     "react-dom": "^16.8.6",
-    "react-test-renderer": "^16.8.6"
+    "react-test-renderer": "^16.8.6",
+    "webpack": "^4.32.0",
+    "webpack-cli": "^3.3.2"
   },
   "dependencies": {
     "moment": "^2.24.0",
