--- a/package.json
+++ b/package.json
@@ -28,17 +28,14 @@
   },
   "homepage": "https://github.com/talentedandrew/react-modern-datepicker#readme",
   "devDependencies": {
-    "@babel/core": "^7.4.4",
-    "@babel/preset-env": "^7.4.4",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.6",
-    "babel-jest": "^22.4.4",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^9.0.0",
+    "babel-jest": "^23.4.2",
     "babel-loader": "^8.0.6",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.13.0",
     "eslint": "^4.19.1",
@@ -46,7 +43,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.13.0",
     "eslint-watch": "^3.1.5",
-    "jest": "^22.4.4",
+    "jest": "^24.8.0",
     "polished": "^1.9.3",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
@@ -57,11 +54,11 @@
     "webpack-cli": "^3.3.2"
   },
   "dependencies": {
-    "moment": "^2.24.0",
+    "dayjs": "^1.8.14",
     "styled-components": "^4.2.0"
   },
   "jest": {
-    "verbose": true,
+    "verbose": false,
     "testURL": "http://localhost/"
   }
 }
