--- a/package.json
+++ b/package.json
@@ -2,16 +2,16 @@
   "name": "react-modern-datepicker",
   "version": "0.7.2",
   "description": "A modern date picker for react library",
-  "main": "build/index.js",
+  "main": "dist/main.js",
   "scripts": {
     "test": "jest",
-    "build": "babel lib -d build",
+    "build-old": "babel lib -d build",
+    "build": "webpack",
     "build:watch": "babel lib -w -d build",
     "lint": "eslint lib/**; exit 0",
     "lint:watch": "esw -w lib/**",
     "lint:fix": "eslint lib/** --fix",
-    "prepublish": "npm run build",
-    "webpack-build-prod": "webpack --mode production"
+    "webpack-build-prod": "webpack"
   },
   "repository": {
     "type": "git",
@@ -29,15 +29,15 @@
   "homepage": "https://github.com/talentedandrew/react-modern-datepicker#readme",
   "devDependencies": {
     "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^9.0.0",
     "babel-jest": "^23.4.2",
     "babel-loader": "^8.0.6",
     "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.13.0",
+    "enzyme-adapter-react-16": "^1.13.1",
     "eslint": "^4.19.1",
     "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-jsx-a11y": "^6.2.1",
@@ -50,8 +50,13 @@
     "react-addons-test-utils": "^15.6.2",
     "react-dom": "^16.8.6",
     "react-test-renderer": "^16.8.6",
-    "webpack": "^4.32.0",
+    "webpack": "^4.32.2",
+    "webpack-bundle-analyzer": "^3.3.2",
     "webpack-cli": "^3.3.2"
+  },
+  "peerDependencies": {
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
   },
   "dependencies": {
     "dayjs": "^1.8.14",
