--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "eslint": "^4.19.1",
     "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.13.0",
+    "eslint-plugin-react": "^7.14.3",
     "eslint-watch": "^3.1.5",
     "jest": "^24.8.0",
     "polished": "^1.9.3",
@@ -66,7 +66,12 @@
     "styled-components": "^4.2.0"
   },
   "jest": {
-    "verbose": false,
-    "testURL": "http://localhost/"
+    "verbose": true,
+    "testURL": "http://localhost/",
+    "collectCoverage": true,
+    "coverageReporters": [
+      "json",
+      "html"
+    ]
   }
 }
